<resources>
    <string name="app_name">android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_refactor">Текстовый редактор</string>
    <string name="menu_calculator">Калькулятор</string>

    <string name="button_about">О программе</string>
    <string name="button_about_me">об авторе</string>
    <string name="button_exit">Выход</string>
    <string name="button_add">Добавить текст</string>
    <string name="empty">Список пуст</string>
</resources>
