<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_sort_black_24dp"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_text_refactor"
                android:icon="@drawable/ic_text_format_black_24dp"
                android:title="@string/menu_refactor"/>
        <item
                android:id="@+id/nav_calculator"
                android:icon="@drawable/ic_attach_file_black_24dp"
                android:title="@string/menu_calculator"/>
    </group>

</menu>
