<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
            android:id="@+id/buttonAbout"
            android:text="@string/button_about"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/buttonAboutMe"
            android:text="@string/button_about_me"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/buttonExit"
            android:text="@string/button_exit"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>